--- a/01.Numpy/02.Numpy-2.ipynb
+++ b/01.Numpy/02.Numpy-2.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
        "       [ 9, 10, 11, 12]])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,6 +51,26 @@
    "metadata": {},
    "source": [
     "- sum 및 axis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "78"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.sum()"
    ]
   },
   {
@@ -83,6 +103,28 @@
     "- a[0.0]    a[0,1]\n",
     "- a[1,0]    a[1,1]\n",
     "- a[2,0]    a[2,1] 앞 줄이 달라졌다고(?)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3,  4],\n",
+       "       [ 5,  6,  7,  8],\n",
+       "       [ 9, 10, 11, 12]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
    ]
   },
   {
@@ -146,15 +188,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.sum(a[:2])\n",
+    "#인덱싱/슬라이싱 이랑 같게 생각 "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- sorting"
+    "- sorting(정렬)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +228,7 @@
        "       [ 2,  5,  1, 14]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +251,7 @@
        "       [ 1,  2,  5, 14]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -253,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +325,7 @@
        "array([12, 25, 38, 42])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +346,7 @@
        "array([42, 38, 25, 12])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,12 +376,33 @@
     "np.argsort(c)\n",
     "\n",
     "#sorting 한 후, 가장 처음 오는 값은 12인데,\n",
-    "# 그때 12의 인덱스는 2310 (?)"
+    "# 그때 12의 인덱스는 2310 (?)\n",
+    "# 순서만 알고 싶을 때"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([42, 38, 12, 25])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +411,7 @@
        "array([12, 25, 38, 42])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -376,27 +460,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.26894142, 0.5       , 0.9999546 ])"
+       "array([4.53978687e-05, 5.00000000e-01, 9.99954602e-01])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "xs = np.array([-1,0,10])\n",
+    "xs = np.array([-10,0,10])\n",
     "\n",
     "sigmoid(xs)\n",
     "\n",
     "# sigmoid  잘 알아야..\n",
     "# 답이 다르게 나와요 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Transpose (전치)"
    ]
   },
   {
@@ -441,19 +532,19 @@
     }
    ],
    "source": [
-    "b.T             # 전치행렬 "
+    "b.T             # 전치행렬 (2차원 배열이 행과 열 전치)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- concatenate, vstack, hstackz]z\n"
+    "- concatenate, vstack, hstack (배열 결합)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +554,7 @@
        "       [3, 4]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -475,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -484,13 +575,13 @@
        "array([[5, 6]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "b = np.array([[5,6]])\n",
+    "b = np.array([[5,6]]) #shape이 (1x2)\n",
     "b"
    ]
   },
@@ -513,7 +604,7 @@
     }
    ],
    "source": [
-    "np.vstack((a,b))"
+    "np.vstack((a,b))    # vertical(세로)로 쌓음     # axis =0과 똑같음 "
    ]
   },
   {
@@ -534,19 +625,126 @@
     }
    ],
    "source": [
-    "np.hstack((a,b.T))      # np.hstack((a,b)) 에서 변경한 값이 "
+    "np.hstack((a,b.T))      # (horizental)b를 한 번 전치해줘야 가로로 쌓음이 가능\n",
+    "                        # 사이즈 맞으면 T 필요X\n",
+    "                        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [3, 4]])"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2],\n",
+       "       [3, 4, 5]])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c=np.arange(6).reshape(2,3)\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 0, 1, 2],\n",
+       "       [3, 4, 3, 4, 5]])"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.hstack((a,c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [3, 4],\n",
+       "       [0, 3],\n",
+       "       [1, 4],\n",
+       "       [2, 5]])"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.vstack((a,c.T))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- Array operation\n",
+    "- 기본적인 사칙연산 제공함"
+   ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 70,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2],\n",
+       "       [3, 4]])"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "- Array operation"
+    "a"
    ]
   },
   {
@@ -614,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -624,13 +822,20 @@
        "       [1., 1.]])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a /a "
+    "a / a "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- broadcasting"
    ]
   },
   {
@@ -655,27 +860,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1, 2],\n",
-       "       [3, 4]])"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -684,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,7 +881,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6]])"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3,  4],\n",
+       "       [ 5,  6,  7,  8],\n",
+       "       [ 9, 10, 11, 12]])"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -707,13 +934,34 @@
        "       [ 83,  98, 113, 128]])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.dot(a,b)     # 그림 그려서 이해 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 38,  44,  50,  56],\n",
+       "       [ 83,  98, 113, 128]])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.dot(b)"
    ]
   },
   {
@@ -776,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +1033,7 @@
        "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -865,7 +1113,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +1143,7 @@
        "       False])"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -887,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -897,7 +1165,7 @@
        "        True])"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,6 +1179,26 @@
    "metadata": {},
    "source": [
     "- argmax, argmin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
    ]
   },
   {
@@ -934,10 +1222,76 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  4,  7],\n",
+       "       [ 9, 88,  6, 45],\n",
+       "       [ 8, 78, 23,  3]])"
+      ]
+     },
+     "execution_count": 114,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2차원 argmax, argmin\n",
+    "e = np.array([[1,2,4,7],[9,88,6,45],[8,78,23,3]])\n",
+    "e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid character in identifier (<ipython-input-115-81782264cc5e>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-115-81782264cc5e>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m     array([3, 1, 1])      # 각 행마다 가장 큰 요소의 인덱스를 배열로\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid character in identifier\n"
+     ]
+    }
+   ],
+   "source": [
+    "np.argmax(e, axis=1)\n",
+    " array([3, 1, 1])      # 각 행마다 가장 큰 요소의 인덱스를 배열로\n",
+    "\n",
+    "np.argmax(e, axis=0)\n",
+    " array([1, 1, 2, 1])   # 각 열마다 가장 큰 요소의 인덱스를 배열로"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 6. Boolean & Fancy index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 121,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
    ]
   },
   {
@@ -962,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -972,7 +1326,7 @@
        "       False])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1023,6 +1377,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 1, 2, 3, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 76,
    "metadata": {},
    "outputs": [
@@ -1039,7 +1413,7 @@
    ],
    "source": [
     "# fancy index\n",
-    "a[[3,5,7]]      # 인덱스 값이 3.5,7만 가져올래 - 팬시 인덱스!"
+    "a[[3,5,7]]      # 인덱스 값이 3,5,7만 가져올래 - 팬시 인덱스!"
    ]
   },
   {
@@ -1088,7 +1462,10 @@
    ],
    "source": [
     "a = np.random.randn(10)     #10개 꺼냄 \n",
-    "a"
+    "a\n",
+    "\n",
+    "# 표준 정규 분포 ( N(0,1) 평균 0, 표준편차 1인 분포) 에서 추출한 샘플을 리턴 \n",
+    "# 음수 나올 수 있음(rand와의 차이점)"
    ]
   },
   {
@@ -1209,7 +1586,7 @@
     }
    ],
    "source": [
-    "np.percentile(a,50), np.median(a)  "
+    "np.percentile(a,50), np.median(a)             # 2사분위"
    ]
   },
   {
