--- a/numpy_연습문제.ipynb
+++ b/numpy_연습문제.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,6 +61,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[10, 20, 30, 40],\n",
+       "       [50, 60, 70, 80]])"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# T (연습문제는 한 줄로 끝내도록)\n",
+    "np.arange(10,90,10).reshape(2,4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[10, 20, 30, 40],\n",
+       "       [50, 60, 70, 80]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# T2\n",
+    "np.arange(1,9).reshape(2,4)*10"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -69,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +124,7 @@
        "       [10, 11, 12, 13, 14]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,6 +132,15 @@
    "source": [
     "m = np.array([[0,1,2,3,4],[5,6,7,8,9],[10,11,12,13,14]])\n",
     "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m = np.arange(15).reshape(3,5)"
    ]
   },
   {
@@ -165,6 +218,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# T\n",
+    "m[-1,-1]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -188,7 +262,29 @@
     }
    ],
    "source": [
-    "m[1,1:3]"
+    "m[1,1:3]\n",
+    "#한 쪽만 슬라이스면 1차원 출력[인덱스,슬라이스]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[6, 7]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m[1:2,1:3]\n",
+    "# 두 쪽 다 슬라이스면 2차원 출력 [슬라이스, 슬라이스]"
    ]
   },
   {
@@ -216,7 +312,28 @@
     }
    ],
    "source": [
-    "m[1:,2:3]"
+    "m[1:,2:3] # 틀렸어! 2차원 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 7, 12])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# T \n",
+    "m[1:,2]         # 1차원 "
    ]
   },
   {
@@ -248,10 +365,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3, 4],\n",
+       "       [8, 9]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# T \n",
+    "m[:-1,3:]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 불리안 인덱스"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11, 12, 13, 14])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f = m.flatten()\n",
+    "f"
    ]
   },
   {
@@ -280,6 +447,29 @@
    "metadata": {},
    "source": [
     "- 이 배열에서 3의 배수를 찾아라."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0,  3,  6,  9, 12])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# T \n",
+    "f[f%3==0]\n",
+    "\n",
+    "# 원소의 값이 T일 때 튕겨져 나오고 아니면 사라지고 (필터링)"
    ]
   },
   {
@@ -336,6 +526,27 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "array([ 1,  5,  9, 13])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# T\n",
+    "f[f%4==1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -352,6 +563,28 @@
    "metadata": {},
    "source": [
     "- 이 배열에서 3으로 나누면 나누어지고 4로 나누면 1이 남는 수를 찾아라."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([9])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# T \n",
+    "f[np.logical_and(f%3==0,f%4==1)]\n",
+    "# 대괄호 내 and X / logicla_and/or 사용 "
    ]
   },
   {
@@ -408,7 +641,33 @@
     "c=np.eye(5,5,k=1,dtype=np.int8)\n",
     "3*a + 2*b + c \n",
     "\n",
-    "# 대박! 풀었다 "
+    "# 대박! 풀었다 \n",
+    "# dtype의 경우 int 정도로 해도 괜찮음 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2, 1, 0, 0, 0],\n",
+       "       [3, 2, 1, 0, 0],\n",
+       "       [0, 3, 2, 1, 0],\n",
+       "       [0, 0, 3, 2, 1],\n",
+       "       [0, 0, 0, 3, 2]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# T \n",
+    "np.eye(5,5,-1,int)*3 + np.eye(5,5,0,int)*2 + np.eye(5,5,1,int)"
    ]
   },
   {
@@ -416,6 +675,149 @@
    "metadata": {},
    "source": [
     "# 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[6.0598, 7.3337, 1.3895, 3.1267, 9.9724, 1.2816],\n",
+       "       [1.7899, 7.5293, 6.6216, 7.8431, 0.9689, 0.5857],\n",
+       "       [9.624 , 6.1656, 0.8663, 5.6127, 6.1652, 9.6384],\n",
+       "       [5.743 , 3.7116, 4.5215, 2.0185, 5.6931, 1.951 ],\n",
+       "       [5.837 , 4.7631, 5.1781, 8.231 , 7.3223, 0.6906]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# T\n",
+    "np.random.seed(2021)\n",
+    "a = np.random.uniform(0,10,30).reshape(5,6).round(4)        # round 4 - 소수점 4자리까지 맞추는 함수같음..\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9.9724"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# T 전체의 최댓값\n",
+    "a.max()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([29.1637, 25.3385, 38.0722, 23.6387, 32.0221])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# T 행의 합 1\n",
+    "a.sum(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([29.1637, 25.3385, 38.0722, 23.6387, 32.0221])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# T 행의 합 2\n",
+    "np.sum(a,axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([9.9724, 7.8431, 9.6384, 5.743 , 8.231 ])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# T 행의 최댓값\n",
+    "a.max(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# T 각 열의 평균\n",
+    "a.mean(axis=0)\n",
+    "a.mean(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.7899, 3.7116, 0.8663, 2.0185, 0.9689, 0.5857])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# T 각 열의 최솟값\n",
+    "a.min(axis=0)"
    ]
   },
   {
@@ -563,6 +965,130 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 영어 성적을 기준으로 = 보편적으로 성적은 내림차순(100 99 71 46) + 영어 성적의 인덱스를 따라라(indice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  1,   2,   3,   4],\n",
+       "       [ 46,  99, 100,  71],\n",
+       "       [ 81,  59,  90, 100]])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# T : sorting \n",
+    "score = np.array([[ 1, 2, 3, 4],[ 46, 99, 100, 71],[ 81, 59, 90, 100]])\n",
+    "score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0, 3, 1, 2], dtype=int64)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# T \n",
+    "# 영어 성적을 argsort()\n",
+    "\n",
+    "indices = np.argsort(score[1])      # score의 1행의 인덱스 순서를 찾으세요\n",
+    "indices"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2, 1, 3, 0], dtype=int64)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# T \n",
+    "# 내림차순으로 다시 \n",
+    "indices[::-1] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  3,   2,   4,   1],\n",
+       "       [100,  99,  71,  46],\n",
+       "       [ 90,  59, 100,  81]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# T \n",
+    "score[:,indices[::-1]]      # score 모든 행에 걸쳐서 / 열 정렬은 indices[::1]로 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  3,   2,   4,   1],\n",
+       "       [100,  99,  71,  46],\n",
+       "       [ 90,  59, 100,  81]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# T\n",
+    "# 한줄로 만들면 \n",
+    "score[:, np.argsort(score[1])[::-1]]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -661,6 +1187,119 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([5, 6, 2, 1, 6, 5, 4, 6, 6, 6, 1, 5, 2, 6, 2, 2, 5, 6, 3, 3, 1, 4,\n",
+       "       2, 1, 3, 4, 5, 6, 1, 6, 2, 3, 6, 2, 6, 2, 3, 3, 5, 6, 3, 4, 2, 3,\n",
+       "       3, 1, 3, 5, 6, 4, 4, 2, 2, 2, 3, 6, 4, 4, 5, 4, 2, 5, 2, 2, 5, 4,\n",
+       "       6, 4, 4, 4, 3, 2, 4, 3, 6, 3, 3, 1, 5, 4, 2, 4, 2, 5, 3, 4, 2, 3,\n",
+       "       6, 3, 6, 3, 4, 5, 6, 2, 2, 6, 1, 6])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# T\n",
+    "np.random.seed(2021)    # 선생님하고 동기화하는 것에 불과\n",
+    "dice = np.random.randint(1,7,100)       # 랜덤 모듈에서 정수의 randint(1,6)\n",
+    "dice                                        # 어디서 1,7이라고? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.7"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# T\n",
+    "np.mean(dice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1, 2, 3, 4, 5, 6])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# T : dice array에서 고유값 \n",
+    "np.unique(dice)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([1, 2, 3, 4, 5, 6]), array([ 8, 21, 19, 18, 13, 21], dtype=int64))"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# dice array에서 고유값 및 그것의 갯수 (1은 몇 번 나왔는가 등)\n",
+    "np.unique(dice,return_counts=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 8, 2: 21, 3: 19, 4: 18, 5: 13, 6: 21}"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique, counts = np.unique(dice, return_counts=True)\n",
+    "dict(zip(unique, counts))\n",
+    "\n",
+    "# unique, counts를 딕셔너리로 보기 "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [
@@ -748,6 +1387,99 @@
    "metadata": {},
    "source": [
     "# 8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 정규분포 주식(All T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10149 10218 10175 10093 10149 "
+     ]
+    }
+   ],
+   "source": [
+    "# 5개만 먼저 테스트 \n",
+    "np. random.seed(2021)\n",
+    "rate = np.random.normal(0,0.01,5)\n",
+    "price = 10000\n",
+    "for i in range(5):\n",
+    "    price = np.round(price*(1+rate[i]))\n",
+    "    print(int(price), end=' ')          # round와 int는 가격이라 소수점 필요없어서 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([12072, 12210, 12255, 12359, 12292, 12262, 12136, 12010, 11984,\n",
+       "       12113])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 250개 해보기 \n",
+    "np. random.seed(2021)\n",
+    "rate = np.random.normal(0,0.01,250)\n",
+    "price = 10000\n",
+    "price_list=[]\n",
+    "for i in range(250):\n",
+    "    price = price + np.round(price*rate[i])\n",
+    "    price_list.append(price)\n",
+    "\n",
+    "price_array = np.array(price_list, dtype=np.int32)\n",
+    "price_array[-10:]         # price_array의 마지막 10개만 추출"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([12072, 12210, 12255, 12359, 12292, 12262, 12136, 12010, 11984,\n",
+       "       12113])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# list 아닌 array로 하고싶다면 \n",
+    "# array는 append(늘어나기)가 안되고 공간을 미리 만들어둬야 함 \n",
+    "np. random.seed(2021)\n",
+    "rate = np.random.normal(0,0.01,250)\n",
+    "price = 10000\n",
+    "price_array = np.empty(250,dtype=np.int32)     # 미리 빈 array 만들어 둠\n",
+    "\n",
+    "for i in range(250):\n",
+    "    price = price + np.round(price*rate[i])\n",
+    "    price_array[i] = price \n",
+    "\n",
+    "price_array[-10:]\n"
    ]
   },
   {
