--- a/02.Pandas/01.Series.ipynb
+++ b/02.Pandas/01.Series.ipynb
@@ -26,16 +26,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-2-ce39ef135659>:1: DeprecationWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "  s = pd.Series()         # () 속에 1차원의 데이터 들어오면 됨(튜플,리스트,딕셔너리, 넘파이배열..)\n"
+     ]
+    }
+   ],
    "source": [
     "s = pd.Series()         # () 속에 1차원의 데이터 들어오면 됨(튜플,리스트,딕셔너리, 넘파이배열..)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +57,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,6 +85,7 @@
     }
    ],
    "source": [
+    "\n",
     "s[0], s['서울']\n",
     "\n",
     "# 인덱싱 : 인덱스 or 내가 지정한 인덱스 값으로 불러올 수 있음  "
@@ -83,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -94,19 +104,20 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "s[[1,3]]\n",
-    "# 여러 개 꺼내기 "
+    "# 여러 개 꺼내기 \n",
+    "# 배열 인덱싱 - 부분 시리즈 반환 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +128,29 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s[['부산','대구']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "부산    3448737\n",
+       "대구    2466052\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +173,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +197,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,11 +218,11 @@
     {
      "data": {
       "text/plain": [
-       "0    1\n",
-       "1    6\n",
-       "2    4\n",
-       "3    3\n",
-       "4    1\n",
+       "0    2\n",
+       "1    1\n",
+       "2    3\n",
+       "3    5\n",
+       "4    5\n",
        "dtype: int32"
       ]
      },
@@ -237,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +283,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,16 +296,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<zip at 0x19ded773040>"
+       "<zip at 0x2c86dea00c0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +351,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +377,7 @@
        "(nan, inf)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +408,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +426,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "서울    9904312\n",
+       "부산    3448737\n",
+       "인천    2890451\n",
+       "대구    2466052\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +459,7 @@
        "array([9904312, 3448737, 2890451, 2466052], dtype=int64)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +481,7 @@
        "Index(['서울', '부산', '인천', '대구'], dtype='object')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +505,7 @@
        "Name: 도시, dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +543,7 @@
        "100"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -507,19 +564,19 @@
        "array([5, 6, 2, 1, 4, 3])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 고유한 값 # 애 왜 이런 순서로 나와? \n",
+    "# 고유한 값 \n",
     "dice.unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +585,7 @@
        "6"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +612,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +631,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "서울    9904312\n",
+       "부산    3448737\n",
+       "인천    2890451\n",
+       "대구    2466052\n",
+       "Name: 도시, dtype: int64"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +664,7 @@
        "(18709552, 4677388.0, 9904312, 2466052)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -594,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +692,7 @@
        "Name: 도시, dtype: float64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +725,7 @@
        "Name: 도시, dtype: int64"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -656,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -669,7 +750,7 @@
        "Name: 도시, dtype: int64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +775,7 @@
        "Name: 도시, dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -719,7 +800,7 @@
        "Name: 도시, dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -752,7 +833,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +858,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,98 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "272830.0    1\n",
-       "55546.0     1\n",
-       "258416.0    1\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 데이터 갯수가 많아지면 위 방법은 적절치 X  \n",
-    "# value_counts() method로는 결측치 있는지 확인 불가 : 결측치는 아예 출력도 안됨 \n",
-    "ds. value_counts()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ds.isna().sum() # 대량의 데이터에서 결측치 개수 구하기 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dice.isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "대구    195597.333333\n",
-       "대전    195597.333333\n",
-       "부산     55546.000000\n",
-       "서울    272830.000000\n",
-       "인천    258416.000000\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 결측치 처리방법(대체편)\n",
-    "ds.fillna(ds.mean())        # 평균으로 채우기 "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +883,148 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "대구     True\n",
+       "대전     True\n",
+       "부산    False\n",
+       "서울    False\n",
+       "인천    False\n",
+       "dtype: bool"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds.isna()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "272830.0    1\n",
+       "55546.0     1\n",
+       "258416.0    1\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 데이터 갯수가 많아지면 위 방법은 적절치 X  \n",
+    "# value_counts() method도 X  : 결측치는 아예 출력도 안됨 \n",
+    "ds. value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ds.isna().sum() # 대량의 데이터에서 결측치 개수 구하기 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dice.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "대구    195597.333333\n",
+       "대전    195597.333333\n",
+       "부산     55546.000000\n",
+       "서울    272830.000000\n",
+       "인천    258416.000000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 결측치 처리방법(대체편)\n",
+    "ds.fillna(ds.mean())        # 평균으로 채우기 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "대구         NaN\n",
+       "대전         NaN\n",
+       "부산     55546.0\n",
+       "서울    272830.0\n",
+       "인천    258416.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -904,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +1049,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -929,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +1074,7 @@
        "dtype: int32"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -954,9 +1085,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "부산     55546.0\n",
+       "서울    272830.0\n",
+       "인천    258416.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 결측치 처리 방법(제거) \n",
     "ds.dropna()\n",
@@ -973,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -987,7 +1132,7 @@
        "dtype: int32"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -999,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +1156,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
