--- a/02.Pandas/03.DataFrame_파일.ipynb
+++ b/02.Pandas/03.DataFrame_파일.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "2   3  3.33  three"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,18 +115,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df를 파일로 만들기 # 파일 이름 정하기)sample2.csv\n",
-    "df.to_csv('sample2.csv')\n",
-    "# 만들어진 거 확인 "
+    "#df로 sample2.csv 파일 생성 \n",
+    "df.to_csv('sample2.csv') "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +188,7 @@
        "2           2   3  3.33  three"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +271,7 @@
        "2   3  3.33  three"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,13 +292,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 메모장, 제주 서귀포 중문 으로 수정함 \n",
+    "- 메모장, 제주 서귀포 중문 으로 수정함 ('sample4.tsv')\n",
     "- 모든 파일로 저장함"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +357,7 @@
        "2  2,060  3,095  2,590"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,12 +371,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "-같은 데이터(sample5,인코딩 ansi, 모든 파일, EUC-KR 이름에 추가)"
+    "- 같은 데이터(sample5, 인코딩 ansi, 모든 파일, EUC-KR 이름에 추가)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -436,7 +435,7 @@
        "2  2,060  3,095  2,590"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -974,7 +973,7 @@
        "25     356     614      0  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -986,13 +985,6 @@
     "# sep=',' 콤마 구분자는 기본이므로 생략가능\n",
     "# 데이터 형태 보면서 연습연습 "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
