판다스 2일차

--- a/02.Pandas/04.DataFrame-조작.ipynb
+++ b/02.Pandas/04.DataFrame-조작.ipynb
@@ -1399,6 +1399,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 시리즈에 apply : 람다의 x 는 시리즈의 모든 열 (맞냐..)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
