--- a/02.Pandas/pandas 연습문제.ipynb
+++ b/02.Pandas/pandas 연습문제.ipynb
@@ -2948,6 +2948,28 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 4\n",
+    "\n",
+    "- 타이타닉호의 승객에 대해 나이와 성별에 의한 카테고리 열인 category1 열을 만들어라. category1 카테고리는 다음과 같이 정의된다.\n",
+    "\n",
+    "- 20살이 넘으면 성별을 그대로 사용한다.\n",
+    "\n",
+    "- 20살 미만이면 성별에 관계없이 “child”라고 한다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "titanic['category'] = "
+   ]
   }
  ],
  "metadata": {
