--- a/05.Crawling/01.BeatifulSoup.ipynb
+++ b/05.Crawling/01.BeatifulSoup.ipynb
@@ -18,19 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# \n",
-    "# \n",
-    "# \n",
-    "# "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +51,7 @@
        "</html>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -118,19 +106,19 @@
        "</div>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "first_div = soup.find('div') # css selector로서의 p태그 \n",
+    "first_div = soup.find('div')\n",
     "first_div"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +127,7 @@
        "<p>a</p>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,6 +175,35 @@
     "all_divs\n",
     "\n",
     "# soup에 포함된 div 3개가 리스트 형태로 출력 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<div>\n",
+       " <p>a</p><p>b</p><p>c</p>\n",
+       " </div>,\n",
+       " <div class=\"ex_class sample\">\n",
+       " <p>1</p><p>2</p><p>3</p>\n",
+       " </div>,\n",
+       " <div id=\"ex_id\">\n",
+       " <p>X</p><p>Y</p><p>Z</p>\n",
+       " </div>]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_divs = soup.find_all('div')\n",
+    "all_divs"
    ]
   },
   {
@@ -340,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +368,7 @@
        " </div>]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +406,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- 결과 가져오기"
+    "### 결과 가져오기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "<!DOCTYPE html>\n",
+       "\n",
+       "<html lang=\"en\">\n",
+       "<head>\n",
+       "<meta charset=\"utf-8\"/>\n",
+       "<meta content=\"width=device-width, initial-scale=1.0\" name=\"viewport\"/>\n",
+       "<title>Web Crawling Example</title>\n",
+       "</head>\n",
+       "<body>\n",
+       "<div>\n",
+       "<p>a</p><p>b</p><p>c</p>\n",
+       "</div>\n",
+       "<div class=\"ex_class sample\">\n",
+       "<p>1</p><p>2</p><p>3</p>\n",
+       "</div>\n",
+       "<div id=\"ex_id\">\n",
+       "<p>X</p><p>Y</p><p>Z</p>\n",
+       "</div>\n",
+       "<h1>This is a heading.</h1>\n",
+       "<p>This is a paragraph.</p>\n",
+       "<p>This is another paragraph.</p>\n",
+       "<a class=\"a sample\" href=\"www.naver.com\">Naver</a>\n",
+       "</body>\n",
+       "</html>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup"
    ]
   },
   {
@@ -401,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +471,7 @@
        "'Naver'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +491,7 @@
        "'Naver'"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +539,7 @@
        "'www.naver.com'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,8 +548,53 @@
     "# 속성 값 \n",
     "soup.select_one('a')['href']\n",
     "\n",
+    "# href 속성은 <a> 태그(Tag)를 통해 연결할 주소를 지정 한다.\n",
     "# 속성값은 내부적으로 딕셔너리로 \n",
     "# 딕셔너리 키 값 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "<!DOCTYPE html>\n",
+       "\n",
+       "<html lang=\"en\">\n",
+       "<head>\n",
+       "<meta charset=\"utf-8\"/>\n",
+       "<meta content=\"width=device-width, initial-scale=1.0\" name=\"viewport\"/>\n",
+       "<title>Web Crawling Example</title>\n",
+       "</head>\n",
+       "<body>\n",
+       "<div>\n",
+       "<p>a</p><p>b</p><p>c</p>\n",
+       "</div>\n",
+       "<div class=\"ex_class sample\">\n",
+       "<p>1</p><p>2</p><p>3</p>\n",
+       "</div>\n",
+       "<div id=\"ex_id\">\n",
+       "<p>X</p><p>Y</p><p>Z</p>\n",
+       "</div>\n",
+       "<h1>This is a heading.</h1>\n",
+       "<p>This is a paragraph.</p>\n",
+       "<p>This is another paragraph.</p>\n",
+       "<a class=\"a sample\" href=\"www.naver.com\">Naver</a>\n",
+       "</body>\n",
+       "</html>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup"
    ]
   },
   {
@@ -500,7 +606,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X Y Z "
+     ]
+    }
+   ],
+   "source": [
+    "ps = soup.select_one('#ex_id').find_all('p')\n",
+    "for p in ps:\n",
+    "    print(p.string, end =' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +636,7 @@
        "</div>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -531,19 +656,19 @@
        "[<p>X</p>, <p>Y</p>, <p>Z</p>]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 3\n",
+    "\n",
     "soup.select_one('#ex_id').find_all('p')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -582,13 +707,14 @@
        "[<p>This is a paragraph.</p>, <p>This is another paragraph.</p>]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "soup.find_all('p')[-2:]"
+    "soup.find_all('p')[-2:]\n",
+    "\n"
    ]
   },
   {
@@ -609,13 +735,6 @@
     "for ptag in soup.find_all('p')[-2:]:\n",
     "    print(ptag.string)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
