--- a/05.Crawling/한빛출판네트워크.ipynb
+++ b/05.Crawling/한빛출판네트워크.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
        "20"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "'/store/books/look.php?p_code=B6694310162'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,50 +110,6 @@
     "li = lis[0]\n",
     "href = li.find('a')['href']\n",
     "href"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'하루 한 장 초등과학 365'"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 제목\n",
-    "title = li.select('.info > p')[0].get_text().strip()\n",
-    "title "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'치바 가즈요시'"
-      ]
-     },
-     "execution_count": 40,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 저자 \n",
-    "author = li.select('.info > p')[1].get_text().strip()\n",
-    "author "
    ]
   },
   {
@@ -171,8 +127,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 제목, 저자도 sub에서 꺼내기"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +144,7 @@
        "'https://www.hanbit.co.kr/store/books/look.php?p_code=B6694310162'"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +167,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<div class=\"store_product_info_box\">\n",
+       "<h3>하루 한 장 초등과학 365</h3>\n",
+       "<p class=\"stit\">과학과 친해지는 탐구생활 교과서</p>\n",
+       "<div class=\"info_area\">\n",
+       "<div class=\"info_ico\">\n",
+       "<p class=\"ico_l\">한빛라이프</p>\n",
+       "<p class=\"ico_book2\">번역서</p>\n",
+       "<p class=\"ico_shopping1\">판매중</p>\n",
+       "</div>\n",
+       "<div class=\"sns_ico\">\n",
+       "<span class=\"ico_facebook\"><a href=\"https://www.facebook.com/share.php?u=https://www.hanbit.co.kr/store/books/look.php?p_code=B6694310162\" target=\"_blank\">페이스북 퍼가기</a></span>\n",
+       "<!-- <span class=\"ico_google\"><a href=\"https://plus.google.com/share?url=https://www.hanbit.co.kr/store/books/look.php?p_code=B6694310162\" target=\"_blank\">구글+ 퍼가기</a></span> -->\n",
+       "<span class=\"ico_twitter\"><a href=\"https://twitter.com/share?text=%ED%95%98%EB%A3%A8+%ED%95%9C+%EC%9E%A5+%EC%B4%88%EB%93%B1%EA%B3%BC%ED%95%99+365&amp;url=https://www.hanbit.co.kr/store/books/look.php?p_code=B6694310162\" target=\"_blank\">트위터 퍼가기</a></span>\n",
+       "</div>\n",
+       "</div>\n",
+       "<ul class=\"info_list\">\n",
+       "<li><strong>저자 : </strong><span>치바 가즈요시 </span></li>\n",
+       "<li><strong>번역 : </strong><span>허영은 , 유우종 (감수) </span></li>\n",
+       "<li><strong>출간 : </strong><span>2021-12-14</span></li>\n",
+       "<li><strong>페이지 : </strong><span>416 쪽</span></li>\n",
+       "<li><strong>ISBN : </strong><span>9791190846295</span></li>\n",
+       "<li><strong>물류코드 :</strong><span>5329</span></li>\n",
+       "</ul>\n",
+       "<div class=\"tag_area\"><span>TAG : </span><a href=\"/search/search_list.html?ptype=B&amp;keyword=초등과학기본서\">초등과학기본서</a> ,<a href=\"/search/search_list.html?ptype=B&amp;keyword=초등교양\">초등교양</a> ,<a href=\"/search/search_list.html?ptype=B&amp;keyword=과학교육\">과학교육</a> ,<a href=\"/search/search_list.html?ptype=B&amp;keyword=교양과학\">교양과학</a> </div>\n",
+       "<div class=\"step_area ico_step1\">\n",
+       "<span><strong>초급</strong></span>\n",
+       "<span> 초중급 </span>\n",
+       "<span> 중급 </span>\n",
+       "<span> 중고급 </span>\n",
+       "<span> 고급 </span>\n",
+       "</div>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "info = sub_soup.select_one('.store_product_info_box')\n",
+    "info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'하루 한 장 초등과학 365'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 제목 \n",
+    "title = info.find('h3').get_text().strip()\n",
+    "title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -218,49 +255,69 @@
        " <li><strong>물류코드 :</strong><span>5329</span></li>]"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 역자 \n",
-    "sub_soup.select('.info_list > li')"
+    "info.find_all('li')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-18-b2e81e4377a5>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-18-b2e81e4377a5>\"\u001b[1;36m, line \u001b[1;32m3\u001b[0m\n\u001b[1;33m    # 숫자 아닌 거 전부 제외? replace? int\u001b[0m\n\u001b[1;37m                                  ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
+   "source": [
+    "def convert_unit(s):\n",
+    "    # : 기준으로 스플릿해서 [1]만 사용 \n",
+    "    # 숫자 아닌 거 전부 제외? replace? int "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6"
+       "'저자 : 치바 가즈요시'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sub_lis = sub_soup.select('.info_list > li')\n",
-    "len(sub_lis)"
+    "# 저자 \n",
+    "author = info.find('li').get_text().strip()\n",
+    "author"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'출간 : 2021-12-10'"
+       "'번역 : 허영은 , 유우종 (감수) '"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +341,7 @@
        "'허영은 , 유우종 (감수) '"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,42 +522,10 @@
     {
      "data": {
       "text/plain": [
-       "'10% off'"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 할인율 \n",
-    "off = sub_lis2[1].get_text().split(':')[1]\n",
-    "off = off.split('원')[1][1:-1]\n",
-    "off\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 이걸 어떻게 처리하면 좋을까... "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "990"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -513,33 +538,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'5%'"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 적립율\n",
-    "pct = sub_lis2[2].get_text().split(':')[1]\n",
-    "pct.split('점')[1][2:-1]\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### 페이지에 있는 전체 데이터 가져오기"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -550,35 +560,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      ".\n",
-      ".\n",
-      ".\n",
-      ".\n",
-      ".\n",
-      ".\n",
-      ".\n",
-      ".\n",
-      ".\n",
-      ".\n",
-      ".\n",
-      ".\n",
-      ".\n",
-      ".\n",
-      ".\n",
-      ".\n",
-      ".\n",
-      ".\n",
-      ".\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -617,9 +601,9 @@
        "      <th>0</th>\n",
        "      <td>하루 한 장 초등과학 365</td>\n",
        "      <td>치바 가즈요시</td>\n",
-       "      <td>None</td>\n",
        "      <td>허영은 , 유우종 (감수)</td>\n",
        "      <td>2021-12-14</td>\n",
+       "      <td>416 쪽</td>\n",
        "      <td>19800</td>\n",
        "      <td>17820</td>\n",
        "      <td>10% off</td>\n",
@@ -630,9 +614,9 @@
        "      <th>1</th>\n",
        "      <td>다시, 배우다</td>\n",
        "      <td>폴 김</td>\n",
-       "      <td>None</td>\n",
        "      <td>2021-12-10</td>\n",
        "      <td>304 쪽</td>\n",
+       "      <td>9791157845545</td>\n",
        "      <td>16000</td>\n",
        "      <td>14400</td>\n",
        "      <td>10% off</td>\n",
@@ -643,9 +627,9 @@
        "      <th>2</th>\n",
        "      <td>당당한 디자인 결정을 위한 9가지 방법</td>\n",
        "      <td>톰 그리버</td>\n",
-       "      <td>None</td>\n",
        "      <td>김민성 , 곽서희</td>\n",
        "      <td>2021-12-10</td>\n",
+       "      <td>376 쪽</td>\n",
        "      <td>22000</td>\n",
        "      <td>19800</td>\n",
        "      <td>10% off</td>\n",
@@ -656,9 +640,9 @@
        "      <th>3</th>\n",
        "      <td>365 부모 말하기 연습 일력(스프링북)</td>\n",
        "      <td>박재연 , 공인영</td>\n",
-       "      <td>None</td>\n",
        "      <td>2021-12-01</td>\n",
        "      <td>384 쪽</td>\n",
+       "      <td>9791190846301</td>\n",
        "      <td>18000</td>\n",
        "      <td>16200</td>\n",
        "      <td>10% off</td>\n",
@@ -669,9 +653,9 @@
        "      <th>4</th>\n",
        "      <td>공학도를 위한 수치해석(8판)</td>\n",
        "      <td>Steven C.Chapra , Raymond P. Canale</td>\n",
-       "      <td>None</td>\n",
        "      <td>나양 , 이승배 , 임윤철</td>\n",
        "      <td>2021-11-30</td>\n",
+       "      <td>600 쪽</td>\n",
        "      <td>36000</td>\n",
        "      <td>36000</td>\n",
        "      <td>0% off</td>\n",
@@ -683,22 +667,29 @@
        "</div>"
       ],
       "text/plain": [
-       "                       제목                                   저자    역자  \\\n",
-       "0         하루 한 장 초등과학 365                              치바 가즈요시  None   \n",
-       "1                 다시, 배우다                                  폴 김  None   \n",
-       "2   당당한 디자인 결정을 위한 9가지 방법                                톰 그리버  None   \n",
-       "3  365 부모 말하기 연습 일력(스프링북)                            박재연 , 공인영  None   \n",
-       "4        공학도를 위한 수치해석(8판)  Steven C.Chapra , Raymond P. Canale  None   \n",
+       "                       제목                                   저자  \\\n",
+       "0         하루 한 장 초등과학 365                              치바 가즈요시   \n",
+       "1                 다시, 배우다                                  폴 김   \n",
+       "2   당당한 디자인 결정을 위한 9가지 방법                                톰 그리버   \n",
+       "3  365 부모 말하기 연습 일력(스프링북)                            박재연 , 공인영   \n",
+       "4        공학도를 위한 수치해석(8판)  Steven C.Chapra , Raymond P. Canale   \n",
        "\n",
-       "                출간일          페이지     정가     판가      할인율          마일리지 적립율  \n",
-       "0   허영은 , 유우종 (감수)    2021-12-14  19800  17820  10% off     990점 (5%)  5%  \n",
-       "1        2021-12-10        304 쪽  16000  14400  10% off     800점 (5%)  5%  \n",
-       "2        김민성 , 곽서희    2021-12-10  22000  19800  10% off   1,100점 (5%)  5%  \n",
-       "3        2021-12-01        384 쪽  18000  16200  10% off     900점 (5%)  5%  \n",
-       "4   나양 , 이승배 , 임윤철    2021-11-30  36000  36000   0% off   1,080점 (3%)  3%  "
+       "                역자          출간일             페이지     정가     판가      할인율  \\\n",
+       "0  허영은 , 유우종 (감수)    2021-12-14           416 쪽  19800  17820  10% off   \n",
+       "1       2021-12-10        304 쪽   9791157845545  16000  14400  10% off   \n",
+       "2       김민성 , 곽서희    2021-12-10           376 쪽  22000  19800  10% off   \n",
+       "3       2021-12-01        384 쪽   9791190846301  18000  16200  10% off   \n",
+       "4  나양 , 이승배 , 임윤철    2021-11-30           600 쪽  36000  36000   0% off   \n",
+       "\n",
+       "           마일리지 적립율  \n",
+       "0     990점 (5%)  5%  \n",
+       "1     800점 (5%)  5%  \n",
+       "2   1,100점 (5%)  5%  \n",
+       "3     900점 (5%)  5%  \n",
+       "4   1,080점 (3%)  3%  "
       ]
      },
-     "execution_count": 68,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,6 +753,71 @@
     "    \n",
     "    \n",
     "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from tqdm.notebook import tqdm \n",
+    "# 10페이지 전부 가져오는 등 시간이 오래걸리는 작업할 때 위에 삽입하면 진행율 보임 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'book_dict' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-24-79d7f54fb329>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# 딕셔너리 만들어 준 뒤\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mauthor\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbook_dict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'저자'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mtrans\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbook_dict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'번역'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mpage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbook_dict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'페이지'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'book_dict' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# 딕셔너리 만들어 준 뒤 \n",
+    "author = book_dict['저자']\n",
+    "trans = book_dict['번역']\n",
+    "page = book_dict['페이지'].split()[0]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 번역/ 번역이 없거나 대신 구판정보가 있는 데이터 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'book_dict' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-27-e4b615fa62ac>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mif\u001b[0m \u001b[1;34m'번역'\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mbook_dict\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0mtrans\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbook_dict\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'번역'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mtrans\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'-'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'book_dict' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "if '번역' in book_dict.keys():\n",
+    "    trans = book_dict['번역']\n",
+    "else: \n",
+    "    trans = '-'"
    ]
   },
   {
