--- a/01.Numpy/01.Numpy-1.ipynb
+++ b/01.Numpy/01.Numpy-1.ipynb
@@ -202,6 +202,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['1', '2', '3', '4', '5'], dtype='<U1')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ab = np.array([1,2,3,4,5], str)\n",
+    "ab"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
